# mmm-ebook

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
assets/: style.css
mmm_ebook/: main.py
output/: mmm.epub  title.html
output/2022/: chapter_20221211.html
output/2023/: chapter_20230226.html  chapter_20230407.html  chapter_20230427.html  chapter_20230723.html  chapter_20230904.html
src/: build.rs  config.rs  data.rs  main.rs  write.rs
tests/: test_mmm_ebook.py
