[package]
name = "triple_m_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
build_html = "2.4.0"
chrono = "0.4.31"
epub-builder = "0.7.4"
reqwest = { version = "0.11.20", features = ["blocking"]}
rss = "2.0.6"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
